--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,5 @@
 @@include('html/header.html',{"title":"index"})
 @@include('html/components/_mainSlider.html')
-
+@@include('html/components/_roadMap.html')
+@@include('html/components/_reviews.html')
 @@include('html/footer.html')
