--- a/src/index.html
+++ b/src/index.html
@@ -2,4 +2,6 @@
 @@include('html/components/_mainSlider.html')
 @@include('html/components/_roadMap.html')
 @@include('html/components/_reviews.html')
+@@include('html/components/_callback.html')
+@@include('html/components/_services.html')
 @@include('html/footer.html')
