--- a/src/html/header.html
+++ b/src/html/header.html
@@ -8,21 +8,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
+    <script src="https://api-maps.yandex.ru/v3/?apikey=31395160-48e5-4f64-b599-488f67a744c4&lang=ru_RU"></script>
 </head>
 <body>
 <div class="wrapper">
     <header class="header">
         <div class="container">
             <div class="header-wrapper">
-                <div class="header__logo">
+                <a href="#" class="header__logo">
                     <img src="@img/logo.svg" alt="">
-                </div>
+                </a>
                 <nav class="header__links">
-                    <a href="#" class="header__link">Дорожная карта</a>
-                    <a href="#" class="header__link">Отзывы</a>
-                    <a href="#" class="header__link">Контакты</a>
-                    <a href="#" class="header__link">Услуги</a>
+                    <a href="#main" class="header__link">Дорожная карта</a>
+                    <a href="#reviews" class="header__link">Отзывы</a>
+                    <a href="#contact" class="header__link">Контакты</a>
+                    <a href="#services" class="header__link">Услуги</a>
                 </nav>
                 <div class="header__info">
                     <div class="header__contacts">
@@ -41,5 +41,5 @@
     </header>
    
       
-    <main class="main">
+    <main id="main" class="main">
         
