--- a/src/index.html
+++ b/src/index.html
@@ -4,4 +4,5 @@
 @@include('html/components/_reviews.html')
 @@include('html/components/_callback.html')
 @@include('html/components/_services.html')
+@@include('html/components/_modal.html')
 @@include('html/footer.html')
