--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -46,7 +46,7 @@
                     <div class="footer__btn btn btn_white">
                         Получить дорожную карту
                     </div>
-                    <a href="tel:+79912228985" class="footer__link-phone">+7(991) 222-89-85</a>
+                    <a href="tel:79912228985" class="footer__link-phone">+7(991) 222-89-85</a>
                     <p>г. Уфа, ул. Менделеева, 134 к.1</p>
                 </div>
 
