--- a/src/html/header.html
+++ b/src/html/header.html
@@ -29,7 +29,7 @@
 						</nav>
 						<div class="header__info">
 							<div class="header__contacts">
-								<a href="tel:+79912228985" class="header__link-phone"
+								<a href="tel:79912228985" class="header__link-phone"
 									>+ 7(991) 222-89-85</a
 								>
 								<a href="#" class="header__adress"
